@@ -4,6 +4,7 @@ HEAD
 - xt_CHECKSUM: abort build when the feature is already provided by mainline
 - xt_TARPIT: fix kernel warning about RTAX_HOPLIMIT being used
 - xt_TEE: abort build when the feature is already provided by mainline
+- xt_pknock: support UDPLITE
 - xt_psd: restore functionality with UDP
 - xt_psd: support UDPLITE
 - update to ipset 6.8
